// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagList > hide items after maxLength 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            cloud
          </span>
        </span>
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            provider
          </span>
        </span>
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            database
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="cloud"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              cloud
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="provider"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              provider
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="database"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              database
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_11_"
        aria-describedby="_r_11_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_2_"
        aria-describedby="_r_2_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            very
          </span>
        </span>
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            item
          </span>
        </span>
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            item
          </span>
        </span>
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            item
          </span>
        </span>
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            item
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="very"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              very
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="item"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              item
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="item"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              item
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="item"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              item
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="item"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              item
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_2h_"
        aria-describedby="_r_2h_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +50
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      />
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway is the best cloud provider ever invented"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway is the best cloud provider ever invented
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_j_"
        aria-describedby="_r_j_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      />
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="cloud"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_h_"
        aria-describedby="_r_h_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly when maxLength is smaller than first tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <div
          aria-controls="_r_1b_"
          aria-describedby="_r_1b_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
            data-testid=""
            type="button"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </button>
        </div>
        <div
          aria-controls="_r_1d_"
          aria-describedby="_r_1d_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
            data-testid=""
            type="button"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              cloud
            </span>
          </button>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            aria-controls="_r_17_"
            aria-describedby="_r_17_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              class="styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
              data-testid="scaleway"
              type="button"
            >
              <span
                class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                scaleway
              </span>
            </button>
          </div>
          <div
            aria-controls="_r_19_"
            aria-describedby="_r_19_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              class="styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
              data-testid="cloud"
              type="button"
            >
              <span
                class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="cloud"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="cloud"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_e_"
        aria-describedby="_r_e_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_m_"
        aria-describedby="_r_m_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with icons 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <div
          aria-controls="_r_1j_"
          aria-describedby="_r_1j_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
            data-testid=""
            type="button"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </button>
        </div>
        <div
          aria-controls="_r_1l_"
          aria-describedby="_r_1l_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
            data-testid=""
            type="button"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              cloud
            </span>
          </button>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            aria-controls="_r_1f_"
            aria-describedby="_r_1f_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              class="styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
              data-testid="scaleway"
              type="button"
            >
              <span
                class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                scaleway
              </span>
            </button>
          </div>
          <div
            aria-controls="_r_1h_"
            aria-describedby="_r_1h_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              class="styles__1f9zr5y5 styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp5 styles_undefined_compound_2__d6zknpf"
              data-testid="cloud"
              type="button"
            >
              <span
                class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles_multiline_true__1f9zr5y3 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <span
          class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2 styles_multiline_true__1f9zr5y3"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="cloud"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_16_"
        aria-describedby="_r_16_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: hidden;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      />
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with placement 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <span
          class="ellipsed styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
          data-testid=""
        >
          <span
            class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <span
            class="styles__1f9zr5y5 styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            data-testid="scaleway"
          >
            <span
              class="styles__d6zknp1c style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        aria-controls="_r_5_"
        aria-describedby="_r_5_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
